# PyLauncher

./: .gitignore  LICENSE  README.md  pyproject.toml  run.bat
src/pylauncher/: __init__.py  __main__.py  app.py  constants.py
src/pylauncher/core/: config.py  file_watcher.py  process_handler.py  scheduler.py  script_manager.py  state.py  tray_manager.py  venv_manager.py
src/pylauncher/ui/: main_window.py  title_bar.py
src/pylauncher/ui/dialogs/: cli_dialog.py  schedule_dialog.py  settings_dialog.py
src/pylauncher/ui/tabs/: installed_tab.py  logs_tab.py  running_tab.py
src/pylauncher/ui/widgets/: icon_button.py  output_textbox.py  script_row.py
src/pylauncher/utils/: assets.py  threading.py
