[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pylauncher"
version = "1.1.0"
description = "A Python script manager and launcher with a modern GUI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Affifuddin Hazam", email = "affifuddin-hazam@users.noreply.github.com"},
]

[project.urls]
Homepage = "https://github.com/affifuddin-hazam/PyLauncher"
Repository = "https://github.com/affifuddin-hazam/PyLauncher"
dependencies = [
    "customtkinter>=5.2.0",
    "Pillow>=10.0.0",
    "watchdog>=3.0.0",
    "pystray>=0.19.0",
    "pipreqs>=0.4.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
build = ["pyinstaller>=6.0"]
dnd = ["windnd>=1.0.7"]

[project.scripts]
pylauncher = "pylauncher.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
